--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,10 @@
   "require": {
     "php": "^8.1.0",
     "ext-mysqli": "*",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "vlucas/phpdotenv": "^5.6"
+  },
+  "require-dev": {
+    "heroku": "*"
   }
 }
